Separate DiscountManagementView, made successMessage static, fixed getting all discounts